# edi

./: .gitignore  README.md  edi.sln  edi.vcxproj  edi.vcxproj.filters
conteudos/: AlocacaoMemoria.md  AnaliseAssintotica.md  ArrayLists.md  Arvores.md  ArvoresAVL.md  Busca.md  DoublyLinkedLists.md  Filas.md  Introducao.md  LinkedLists.md  Listas.md  Ordenacao.md  Pilhas.md  Simulacao.md  TabelasDispersao.md
conteudos/ordenacao/: BubbleSort.md  InsertionSort.md  MergeSort.md  QuickSort.md  SelectionSort.md
src/avl/: avl2.h
src/bst/: bst2.h
src/c/: balParentese.cpp
src/filas/: arrayqueue2.h  linkedqueue2.h
src/go/: main.go
src/listas/: arraylist-aula.c  arraylist.c  arraylist.go  arraylist2.h  (+3 more)
test/: CMakeLists.txt  README.md  test.cpp  testArrayList.cpp  testArrayList.vcxproj  testArrayList2.cpp  testArrayList2.vcxproj  testArrayQueue.cpp  testArrayQueue.vcxproj  testArrayQueue2.cpp  testArrayQueue2.vcxproj  testArrayStack.cpp  testArrayStack.vcxproj  testArrayStack2.cpp  testArrayStack2.vcxproj  testAvl.cpp  testAvl.vcxproj  testAvl2.cpp  testBst.cpp  testBst.vcxproj  testBst2.cpp  testDoublyLinkedList.cpp  testDoublyLinkedList.vcxproj  testDoublyLinkedList2.cpp  testDoublyLinkedList2.vcxproj  testLinkedList.cpp  testLinkedList.vcxproj  testLinkedList2.cpp  testLinkedList2.vcxproj  testLinkedListStack.cpp  testLinkedListStack.vcxproj  testLinkedQueue.cpp  testLinkedQueue.vcxproj  testLinkedQueue2.cpp  testLinkedQueue2.vcxproj  testLinkedStack.cpp  testLinkedStack.vcxproj  testLinkedStack2.cpp  testLinkedStack2.vcxproj  testSortingAlgorithms.cpp  (+3 more)
(+52 files in other folders)
